--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,10 +5,20 @@
 
 .container {
   display: flex;
+  flex-direction: column;
+  gap: 20px;
   justify-content: center;
+  align-items: center;
 }
 .content {
   font-size: 24px;
   font-weight: 600;
   color: #fff;
+}
+
+.home {
+  color: #fff;
+  &:hover {
+    text-decoration: underline;
+  }
 }
