--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,14 +8,24 @@
   grid-template: 1fr / 180px 1fr 180px;
   gap: 20px;
   align-items: center;
+  @media (max-width: 768px) {
+    grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+  }
 }
 
 .logo {
   font-weight: 600;
   font-size: 24px;
+  @media (max-width: 768px) {
+    font-size: 16px;
+  }
 }
 .search {
   justify-self: center;
+  @media (max-width: 768px) {
+    order: 3;
+    grid-column: span 2;
+  }
 }
 .info {
   justify-self: end;
@@ -36,5 +46,8 @@
   }
   &:hover:after {
     opacity: 1;
+  }
+  @media (max-width: 768px) {
+    font-size: 12px;
   }
 }
