--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -8,7 +8,7 @@
   padding: 14px;
   border-radius: 28px;
   background-color: #fafafa;
-  width: 500px;
+  // width: 100%;
   &:focus-within {
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.75);
   }
