--- a/src/components/Weather/widgets/CurrentWeather/CurrentWeather.module.scss
+++ b/src/components/Weather/widgets/CurrentWeather/CurrentWeather.module.scss
@@ -1,6 +1,74 @@
 @import "@/shared/ui/variables.scss";
 
+.tile {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: center;
+  @media (max-width: 768px) {
+    gap: 20px;
+  }
+}
+
+.top {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+  font-weight: 600;
+  @media (max-width: 768px) {
+    font-size: 18px;
+  }
+  @media (max-width: 540px) {
+    font-size: 12px;
+  }
+}
+
 .icon {
-  height: 200px;
-  width: 200px;
+  flex: 1 1 auto;
+  width: 70%;
+}
+
+.info {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  @media (max-width: 768px) {
+    gap: 10px;
+  }
+}
+
+.conditions {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.tempInfo {
+  display: grid;
+  gap: 20px;
+  width: 100%;
+  grid-template: 1fr / repeat(3, 1fr);
+  align-items: end;
+  text-align: center;
+  @media (max-width: 768px) {
+    gap: 5px;
+  }
+}
+
+.min,
+.max {
+  font-size: 20px;
+  @media (max-width: 768px) {
+    font-size: 12px;
+  }
+}
+
+.temp {
+  font-size: 30px;
+  font-weight: 600;
+  @media (max-width: 768px) {
+    font-size: 20px;
+  }
 }
