--- a/src/components/Weather/Weather.module.scss
+++ b/src/components/Weather/Weather.module.scss
@@ -34,8 +34,13 @@
   display: grid;
   grid-template: 1fr / repeat(auto-fill, minmax(240px, 1fr));
   grid-auto-rows: 1fr;
-  gap: 20px;
+  gap: 40px;
   @media (max-width: 992px) {
     grid-template: 1fr / repeat(auto-fill, minmax(180px, 1fr));
+  }
+  @media (max-width: 768px) {
+    grid-template: auto / repeat(auto-fill, minmax(180px, 1fr));
+
+    gap: 20px;
   }
 }
