--- a/src/shared/ui/Tile/Tile.module.scss
+++ b/src/shared/ui/Tile/Tile.module.scss
@@ -4,7 +4,7 @@
   background-color: rgba(#fff, 0.5);
   padding: 10px;
   border-radius: 20px;
-  aspect-ratio: 1;
+  // aspect-ratio: 1;
   @media (max-width: 768px) {
     border-radius: 10px;
   }
@@ -17,7 +17,7 @@
   grid-column: span 2;
   grid-row: span 2;
   padding: 40px;
-  aspect-ratio: 1;
+  // aspect-ratio: 1;
   @media (max-width: 768px) {
     padding: 20px;
   }
