--- a/src/components/Weather/Weather.module.scss
+++ b/src/components/Weather/Weather.module.scss
@@ -27,20 +27,18 @@
   font-size: 24px;
   font-weight: 600;
   @media (max-width: 768px) {
-    font-size: 18px;
+    font-size: 16px;
   }
 }
 .content {
   display: grid;
-  grid-template: 1fr / repeat(auto-fill, minmax(240px, 1fr));
+  // grid-template: 1fr / repeat(auto-fill, minmax(240px, 1fr));
+  grid-template: 1fr / repeat(4, 1fr);
   grid-auto-rows: 1fr;
   gap: 40px;
-  @media (max-width: 992px) {
-    grid-template: 1fr / repeat(auto-fill, minmax(180px, 1fr));
-  }
   @media (max-width: 768px) {
-    grid-template: auto / repeat(auto-fill, minmax(180px, 1fr));
-
+    grid-template: auto / repeat(2, 1fr);
+    grid-auto-rows: auto;
     gap: 20px;
   }
 }
