--- a/src/shared/ui/Tile/Tile.module.scss
+++ b/src/shared/ui/Tile/Tile.module.scss
@@ -5,20 +5,27 @@
   padding: 10px;
   border-radius: 20px;
   // aspect-ratio: 1;
+  padding: 20px;
   @media (max-width: 768px) {
     border-radius: 10px;
+    padding: 10px;
   }
 }
 .x2 {
   grid-column: span 2;
-  aspect-ratio: 2;
+  // aspect-ratio: 2;
+  padding: 40px;
+  @media (max-width: 768px) {
+    border-radius: 10px;
+    padding: 20px;
+  }
 }
 .x4 {
   grid-column: span 2;
   grid-row: span 2;
   padding: 40px;
-  // aspect-ratio: 1;
   @media (max-width: 768px) {
+    border-radius: 10px;
     padding: 20px;
   }
 }
