--- a/src/widgets/DaysWeather/DaysWeather.module.scss
+++ b/src/widgets/DaysWeather/DaysWeather.module.scss
@@ -5,10 +5,8 @@
   flex-direction: column;
   gap: 30px;
 }
-.top {
-  display: flex;
-  gap: 10px;
-  justify-content: space-between;
+
+.title {
   font-size: 20px;
   font-weight: 600;
   @media (max-width: 768px) {
@@ -18,17 +16,9 @@
     font-size: 12px;
   }
 }
-.title {
-}
+
 .content {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   display: flex;
-  gap: 20px;
-  overflow-x: auto;
-  overflow-y: hidden;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-  &::-webkit-scrollbar {
-    display: none;
-  }
+  flex-direction: column;
 }
