--- a/src/widgets/HoursWeather/Hour/Hour.module.scss
+++ b/src/widgets/HoursWeather/Hour/Hour.module.scss
@@ -6,13 +6,22 @@
   gap: 4px;
   justify-content: center;
   align-items: center;
-  flex: 0 0 60px;
+  flex: 1 0 60px;
+  @media (max-width: 768px) {
+    flex: 1 0 40px;
+  }
 }
 .hour,
 .temp {
   font-size: 18px;
+  @media (max-width: 768px) {
+    font-size: 14px;
+  }
 }
 .icon {
-  flex: 1 0 auto;
+  flex: 1 0 60px;
   width: 100%;
+  @media (max-width: 768px) {
+    flex: 1 0 30px;
+  }
 }
