--- a/src/components/Weather/Weather.module.scss
+++ b/src/components/Weather/Weather.module.scss
@@ -1,4 +1,5 @@
 @import "@/shared/ui/variables.scss";
+
 .wrapper {
   padding: 40px;
   border-radius: 40px;
@@ -23,7 +24,13 @@
   background-color: $night;
   color: $white;
 }
+.top {
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+}
 .title {
+  flex: 1 0 80%;
   font-size: 24px;
   font-weight: 600;
   @media (max-width: 768px) {
@@ -32,7 +39,6 @@
 }
 .content {
   display: grid;
-  // grid-template: 1fr / repeat(auto-fill, minmax(240px, 1fr));
   grid-template: 1fr / repeat(4, 1fr);
   grid-auto-rows: 1fr;
   gap: 40px;
