--- a/src/widgets/UVIndex/UVIndex.module.scss
+++ b/src/widgets/UVIndex/UVIndex.module.scss
@@ -19,14 +19,14 @@
   flex: 1 0 auto;
   display: flex;
 }
-.humidity {
+.value {
   font-size: 48px;
   @media (max-width: 768px) {
     font-size: 30px;
   }
 }
 
-.dew {
+.description {
   width: 80%;
   font-size: 20px;
   @media (max-width: 768px) {
