--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,16 +1,21 @@
 .wrapper {
+  display: flex;
+  justify-content: center;
 }
 .search {
-  width: max-content;
+  // width: max-content;
+  width: 70%;
   display: flex;
   align-items: center;
   gap: 14px;
   padding: 14px;
   border-radius: 28px;
   background-color: #fafafa;
-  // width: 100%;
   &:focus-within {
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.75);
+  }
+  @media (max-width: 768px) {
+    width: 100%;
   }
 }
 .action {
